# Iona-protocol

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  PROJECT_STATUS.md  README.md  UPGRADE.md  config.toml  deny.toml  docker-compose.yml  rbac.toml  rust-toolchain.toml
.github/workflows/: attestation.yml  ci.yml  deno.yml  docker-image.yml  makefile.yml  release.yml  rust.yml  security.yml  slsa.yml  slsa_provenance.yml  slsa_release.yml  update-lock.yml  upgrade-compat.yml
adapters/cosmos/: README.md  convert_config.sh  key_import.sh
api/: openapi.yaml
benches/: core_benchmarks.rs
config/: example.toml  ultra.toml
deploy/: OPERATIONS_RUNBOOK.md  TOPOLOGY.md
deploy/configs/: genesis.json  rpc.toml  val1.toml  val2.toml  val3.toml  val4.toml
deploy/faucet/: FAUCET.md
deploy/firewall/: FIREWALL.md  setup_ufw.sh
deploy/nginx/: rpc.conf
deploy/scripts/: atomic_deploy.sh  build_release.sh  dev_reset.sh  healthcheck.sh  pre_deploy_checklist.sh  run_5nodes_local.sh  soak_partition.sh  soak_restart.sh  soak_rpc_load.sh  startup_order.sh
deploy/systemd/: iona-node.service  iona-rpc.service  iona-val1.service  iona-val2.service  iona-val3.service  iona-val4.service
docs/: ARCHITECTURE.md  BENCHMARK_REPORT.md  CHAOS_TESTING.md  CLI.md  ECONOMICS_POS.md  ETH_COMPAT.md  EVM_FULL_OVERVIEW.md  EXPLORER_API.md  FEE_MARKET_EIP1559.md  GOVERNANCE.md  MEMPOOL_RULES.md  OPERATOR_RUNBOOK.md  RELEASES.md  RESEARCH_OBJECTIVES.md  RPC_AUTH.md  SECURITY_FIRST.md  SECURITY_MODEL.md  SIMULATION_TESTING.md  TESTNET.md  ULTRA_ROADMAP.md  VM_OVERVIEW.md  WHITEPAPER.md  abc_hardening.md  client_signing_rust.md  issue-map.md  mega_pp.md  migrations.md  overview.md  overview_plus.md  remote_signer.md  roadmap.md  state_sync_p2p.md  testnet-plan.md  threat_model.md  ultra_upgrade.md  upgrade.md
formal/: upgrade.tla
fuzz/: README.md
fuzz/fuzz_targets/: block_header.rs  consensus_msg.rs  p2p_frame_decode.rs  rpc_json.rs  state_transition.rs  tx_json.rs  vm_bytecode.rs
monitoring/: alert.rules.yml
ops/alerts/: prometheus_rules.yml
ops/grafana/: iona_validator_dashboard.json
ops/slo/: slo_config.yml
packaging/apt-repo/: setup-apt-repo.sh
releases/: SHA256SUMS.template
scripts/: check.sh  generate_sbom.sh  install.sh  repro_check.sh  run_3nodes_local.sh  security_check.sh  upgrade.sh
scripts/chaos/: apply_netem.sh  partition_docker.sh
scripts/testnet/: launch_testnet.sh
sdk/typescript/: package.json  tsconfig.json
src/: admin.rs  audit.rs  config.rs  evidence.rs  execution.rs  governance.rs  ibc.rs  ics020.rs  lib.rs  lst.rs  merkle.rs  metrics.rs  rpc_health.rs  rpc_limits.rs  slashing.rs  snapshot.rs  telemetry.rs  vrf.rs  wal.rs
src/aa_full/: bundler.rs  entry_point.rs  mod.rs  paymaster.rs  simulation.rs
src/adaptive_gas/: mod.rs  pricing.rs  resource_meter.rs  schedule.rs
src/appchain/: mod.rs  registry.rs  slot.rs  sovereign.rs  xcmp.rs
src/config/: validation.rs
src/consensus/: block_producer.rs  debug_trace.rs  diagnostic.rs  double_sign.rs  engine.rs  fast_finality.rs  genesis.rs  messages.rs  mod.rs  quorum.rs  quorum_diag.rs  validator_set.rs
src/crypto/: ed25519.rs  hsm.rs  keystore.rs  mod.rs  remote_signer.rs  tx.rs
src/economics/: governance.rs  mod.rs  params.rs  rewards.rs  staking.rs  staking_tx.rs
src/evm/: db.rs  executor.rs  executor_env.rs  kv_state_db.rs  mod.rs  types.rs
src/execution/: parallel.rs  sandbox.rs  vm_executor.rs
src/mempool/: mev_resistant.rs  mod.rs  pool.rs
src/net/: eclipse_profiles.rs  inmem.rs  mod.rs  p2p.rs  peer_score.rs  peerstore.rs
src/protocol/: activation_guarantees.rs  compat.rs  dual_validate.rs  mod.rs  rolling.rs  safety.rs  state_invariants.rs  transitions.rs  upgrade_constraints.rs  version.rs  wire.rs
src/replay/: divergence.rs  historical.rs  mod.rs  nondeterminism.rs  replay_tool.rs  state_root_verify.rs
src/rpc/: admin_auth.rs  auth_api_key.rs  basefee.rs  block_store.rs  bloom.rs  cert_reload.rs  chain_store.rs  eth_header.rs  eth_rlp.rs  eth_rpc.rs  fs_store.rs  middleware.rs  mod.rs  mpt.rs  proofs.rs  rbac.rs  rlp_encode.rs  router.rs  state_trie.rs  (+3 more)
testnet/: docker-compose.yml  setup.sh
tests/: admin_rbac.rs  consensus_adversarial.rs  determinism.rs  inmem_p2p_flow.rs  integration.rs  invariants_placeholder.rs  pos_rewards.rs  proptests.rs  replay.rs  rpc_hardening.rs  rpc_security_gates.rs  schema_migration.rs  security_regression.rs  simnet.rs  simnet_block_request_flow.rs  simnet_five_node_eventual.rs  simnet_late_joiner.rs  simnet_partition_heal_safety.rs  simple_producer_integration.rs  two_node_proposal_flow.rs  upgrade_rolling.rs  upgrade_sim.rs  vm_integration.rs
(+45 files in other folders)
